Homepage -- Index.html ✅

--- a/styles.css
+++ b/styles.css
@@ -178,6 +178,9 @@
   a:focus-visible {
     color: var(--text-brand-light);
   }
+  img {
+    border-radius: var(--border-radius-3);
+  }
 }
 
 @layer utilities {
@@ -189,5 +192,202 @@
     position: absolute;
     white-space: nowrap;
     width: 1px;
+  }
+  .text-center {
+    text-align: center;
+  }
+  .text-brand {
+    color: var(--text-brand);
+  }
+  .text-high-contrast {
+    color: var(--text-high-contrast);
+  }
+
+  .section-title {
+    font-size: var(--font-size-heading-regular);
+  }
+
+  .background-base {
+    background-color: var(--background-base);
+  }
+  .background-light {
+    background-color: var(--background-light);
+  }
+  .background-extra-light {
+    background-color: var(--background-extra-light);
+  }
+  .background-dark {
+    background-color: var(--background-dark);
+  }
+  .background-extra-dark {
+    background-color: var(--background-extra-dark);
+  }
+
+  .background-accent {
+    background-color: var(--background-accent-dark);
+  }
+
+  .font-size-sm {
+    font-size: var(--font-size-sm);
+  }
+  .font-size-regular {
+    font-size: var(--font-size-regular);
+  }
+  .font-size-md {
+    font-size: var(--font-size-md);
+  }
+  .font-size-lg {
+    font-size: var(--font-size-lg);
+  }
+}
+
+@layer layout {
+  .wrapper {
+    --wrapper-max-width: 1130px;
+    max-width: var(--wrapper-max-width);
+    /* max-width: calc(1130px + 2rem); */
+    margin-inline: auto;
+    padding-inline: 1rem;
+    box-sizing: content-box;
+    /* data-width attribute allow nesting*/
+    &[data-width="narrow"] {
+      --wrapper-max-width: 720px;
+    }
+    &[data-width="wide"] {
+      --wrapper-max-width: 1330px;
+    }
+  }
+  .section {
+    --padding: 3.75rem;
+    padding-block: var(--padding);
+
+    @media (width>760px) {
+      --padding: 8rem;
+      &[data-padding="compact"] {
+        --padding: 4.5rem;
+      }
+    }
+  }
+  /* .wrapper--wide{}
+  .wrapper--narrow{} */
+  /* alternative way to do this with data-width attribute */
+  /* .wrapper[data-width="wide"] {
+  } */
+
+  .equal-columns {
+    display: grid;
+    gap: var(--equal-columns-gap, 1rem);
+    align-items: var(--equal-columns-vertical-alignment, stretch);
+
+    @media (width>760px) {
+      grid-auto-flow: column;
+      grid-auto-columns: 1fr;
+    }
+    &[data-gap="lg"] {
+      --equal-columns-gap: 2rem;
+    }
+    &[data-alignment="centered"] {
+      --equal-columns-vertical-alignment: center;
+    }
+  }
+
+  /* .flex-equal-columns {
+    display: flex;
+    > * {
+      flex: 1;
+    }
+  } */
+
+  .flow > * + * {
+    /* it select everything except first child */
+    /* .flow > * + * equal to .flow > :not(:first-child) only diff is that it comes with extra specificity*/
+    /* color: red; */
+    margin-top: var(--flow-spacer, 1em);
+    /* margin-top == margin-block-start: var(--flow-spacer, 1em); */
+  }
+  .grid-flow {
+    display: grid;
+    gap: var(--grid-flow-gap, 1rem);
+  }
+}
+
+@layer components {
+  .site-header {
+    padding-block: 1rem;
+  }
+  .site-header__inner {
+    display: flex;
+    gap: 0.5rem 1rem;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  .primary-navigation [role="list"] {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem 1rem;
+  }
+  .hero {
+    text-align: center;
+    font-size: var(--font-size-md);
+    color: var(--text-high-contrast);
+    background-image: url(./assets/hero.webp);
+    background-size: cover;
+    background-position: center;
+  }
+  .hero__title {
+    font-size: var(--font-size-heading-lg);
+    span {
+      display: block;
+    }
+  }
+  .card {
+    display: grid;
+    gap: var(--card-gap, 1rem);
+    padding: 1rem;
+    background-color: var(--background-light);
+    border-radius: var(--border-radius-3);
+    img {
+      border-radius: var(--border-radius-2);
+    }
+  }
+  .card__title {
+    font-size: var(--card-title-font-size, var(--font-size-heading-sm));
+    color: var(--card-title-color, var(--text-brand));
+  }
+  .button {
+    display: inline-flex;
+    padding: 0.5rem 1rem;
+    background-color: var(--background-accent-main);
+    font-family: var(--ff-heading);
+    font-size: var(--font-size-md);
+    font-weight: 700;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: var(--border-radius-2);
+  }
+  .button:hover,
+  .button:focus-visible {
+    color: var(--text-high-contrast);
+    background-color: var(--background-accent-light);
+  }
+  .site-footer {
+    background-color: var(--background-dark);
+    text-align: center;
+    padding-block: 2rem;
+    display: grid;
+    gap: 2rem;
+  }
+  .site-footer__title {
+    font-size: var(--font-size-lg);
+    font-family: var(--ff-heading);
+    font-weight: 700;
+    a {
+      color: var(--text-main);
+    }
+    a:hover,
+    a:focus-visible {
+      color: var(--text-brand-light);
+    }
   }
 }
