ADDED: functionality to hamburger Menu ✅

--- a/styles.css
+++ b/styles.css
@@ -322,11 +322,63 @@
     flex-wrap: wrap;
     align-items: center;
   }
-  .primary-navigation [role="list"] {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 0.5rem 1rem;
+  [aria-controls="primary-nav"] {
+    display: none;
+    z-index: 100;
+    background: transparent;
+    cursor: pointer;
+    border: 0;
+    img {
+      border-radius: 0;
+    }
   }
+  .primary-navigation {
+    ul {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem 1rem;
+    }
+
+    a {
+      text-decoration: none;
+    }
+
+    @media (width<760px) {
+      display: none;
+      position: absolute;
+      z-index: 10;
+      top: 0;
+      right: 0;
+      font-size: var(--font-size-lg);
+      font-weight: 700;
+      font-family: var(--ff-heading);
+      background-color: var(--background-accent-main);
+      padding: 2rem;
+      border-radius: 0 0 0 var(--border-radius-3);
+      ul {
+        flex-direction: column;
+        gap: 0;
+      }
+      li + li {
+        margin-block-start: 1.5rem;
+        padding-block-start: 1.5rem;
+        border-top: 2px solid var(--background-accent-light);
+      }
+      [aria-expanded="false"] + & {
+        display: block;
+      }
+    }
+  }
+
+  @media (width<760px) {
+    /* [aria-expanded="true"] + .primary-navigation {
+      display: block;
+    } */
+    [aria-controls="primary-nav"] {
+      display: block;
+    }
+  }
+
   .hero {
     text-align: center;
     font-size: var(--font-size-md);
