ADDED: Skip to main link

--- a/styles.css
+++ b/styles.css
@@ -242,6 +242,23 @@
 }
 
 @layer layout {
+  .skip-to-main {
+    position: absolute;
+    top: 4rem;
+    background-color: var(--background-accent-main);
+    border-radius: var(--border-radius-1);
+    padding: 1rem;
+    outline: 1px solid var(--clr-white);
+  }
+  .skip-to-main:not(:focus) {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+  }
   .wrapper {
     --wrapper-max-width: 1130px;
     max-width: var(--wrapper-max-width);
