--- a/styles.css
+++ b/styles.css
@@ -154,6 +154,12 @@
   html {
     font-family: var(--ff-body);
     line-height: 1.6;
+    scroll-padding: 2rem;
+  }
+  @media (prefers-reduced-motion: no-preference) {
+    html {
+      scroll-behavior: smooth;
+    }
   }
   body {
     font-size: var(--font-size-regular);
@@ -326,6 +332,21 @@
     display: grid;
     gap: var(--grid-flow-gap, 1rem);
   }
+
+  .grid-auto-fit {
+    --auto-fit-min-col-size: 300px;
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(
+      auto-fit,
+      minmax(min(var(--auto-fit-min-col-size), 100%), 1fr)
+    );
+  }
+  .flex-group {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+  }
 }
 
 @layer components {
@@ -408,10 +429,13 @@
     font-size: var(--font-size-heading-lg);
     span {
       display: block;
+      font-size: var(--font-size-heading-xl);
     }
   }
   .card {
-    display: grid;
+    /* display: grid; */
+    display: flex;
+    flex-direction: column;
     gap: var(--card-gap, 1rem);
     padding: 1rem;
     background-color: var(--background-light);
@@ -459,4 +483,104 @@
       color: var(--text-brand-light);
     }
   }
+  .tag-list {
+    display: flex;
+    gap: 0.5rem;
+    flex-wrap: wrap;
+    li {
+      padding: 0 0.25rem;
+      background-color: var(--tag-bg, red);
+      font-family: var(--ff-heading);
+      font-size: var(--font-size-sm);
+      color: var(--text-high-contrast);
+      border-radius: var(--border-radius-1);
+    }
+    [data-edible="edible"] {
+      --tag-bg: var(--background-accent-main);
+    }
+    [data-edible="toxic"] {
+      --tag-bg: var(--clr-red-500);
+    }
+    [data-season="summer"] {
+      --tag-bg: var(--background-accent-main);
+    }
+    [data-season="spring"] {
+      --tag-bg: var(--clr-teal-500);
+    }
+    [data-season="fall"] {
+      --tag-bg: var(--clr-orange-500);
+    }
+  }
+  .mushroom-guide {
+    --card-title-font-size: var(--font-size-lg);
+    --card-title-color: var(--text-high-contrast);
+    --card-gap: 0.75rem;
+  }
+
+  .card__note {
+    background-color: var(--background-extra-light);
+    padding: 0.75rem;
+    border-radius: var(--border-radius-2);
+    margin-block-start: auto;
+  }
+  select {
+    padding: 0.5rem 1rem;
+    background-color: var(--background-accent-main);
+    border: 0;
+    border-radius: var(--border-radius-2);
+    color: var(--text-high-contrast);
+  }
+  .faq-bento {
+    --card-title-color: var(--text-high-contrast);
+    display: grid;
+    gap: 1rem;
+    grid-template-areas:
+      "card-one"
+      "card-two"
+      "card-three"
+      "card-four";
+    .card > img {
+      height: 100%;
+      object-fit: cover;
+    }
+    @media (width>600px) {
+      grid-template-areas:
+        "card-four card-one"
+        "card-three card-two";
+      .card:nth-child(even) > img {
+        order: 3;
+      }
+    }
+    @media (width>900px) {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-areas:
+        "card-one card-two card-four"
+        "card-three card-three card-four";
+    }
+    .card:nth-child(1) {
+      grid-area: card-one;
+    }
+    .card:nth-child(2) {
+      grid-area: card-two;
+    }
+    .card:nth-child(3) {
+      grid-area: card-three;
+      @media (width > 900px) {
+        display: grid;
+        gap: 1rem;
+        grid-template-columns: 1fr 1fr;
+        img {
+          grid-column: 1/2;
+          grid-row: 1/3;
+        }
+      }
+    }
+    .card:nth-child(4) {
+      grid-area: card-four;
+    }
+  }
 }
+/* .mushroom-guide:has(#season [value="spring"]:checked)
+  .card:not(:has([data-season="spring"])) {
+  display: none;
+} */
