--- a/styles.css
+++ b/styles.css
@@ -377,6 +377,9 @@ for delay the transition between pages.
 @layer components {
   .site-header {
     padding-block: 1rem;
+    /* For hiding scrollbar which appears when animating hamburger menu =>*/
+    overflow-x: clip;
+    position: relative;
   }
   .site-header__inner {
     display: flex;
@@ -427,8 +430,21 @@ for delay the transition between pages.
         padding-block-start: 1.5rem;
         border-top: 2px solid var(--background-accent-light);
       }
+      /* to animate hamburger menu */
+      opacity: 0;
+      translate: 100% 0;
+      transition: opacity 0.5s, display 0.5s, translate 0.5s;
+      /* transition-behavior: allow-discrete; it allow transition to work with display property */
+      transition-behavior: allow-discrete;
       [aria-expanded="true"] + & {
         display: block;
+        opacity: 1;
+        /* this is the new @property that set starting style for a css property */
+        translate: 0 0;
+        @starting-style {
+          opacity: 0;
+          translate: 0 -100%;
+        }
       }
     }
   }
