--- a/styles.css
+++ b/styles.css
@@ -430,6 +430,19 @@ for delay the transition between pages.
         padding-block-start: 1.5rem;
         border-top: 2px solid var(--background-accent-light);
       }
+      /* to animate hamburger menu item within hamburger menu  */
+      li {
+        --delay: 0.2s;
+        translate: 50%;
+        transition: translate 0.2s var(--delay), opacity 0.2s var(--delay);
+        opacity: 0;
+      }
+      li:nth-child(2) {
+        --delay: 0.4s;
+      }
+      li:nth-child(3) {
+        --delay: 0.6s;
+      }
       /* to animate hamburger menu */
       opacity: 0;
       translate: 100% 0;
@@ -444,6 +457,14 @@ for delay the transition between pages.
         @starting-style {
           opacity: 0;
           translate: 0 -100%;
+        }
+        li {
+          translate: 0 0;
+          opacity: 1;
+          @starting-style {
+            opacity: 0;
+            translate: 50% 0;
+          }
         }
       }
     }
